[package]
name = "wave"
version = "0.1.0"
authors = ["Josh Hill <josh.hill189@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Roguelike game written in React + TS and Rust + Wasm"
repository = "https://gitlab.com/Pyxxil/wave"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "*"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
