[package]
name = "wave"
version = "0.1.0"
authors = ["Josh Hill <josh.hill189@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Roguelike game written in React + TS and Rust + Wasm"
repository = "https://gitlab.com/Pyxxil/wave"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "*"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "*"
rand = { version = "*", features = [ "wasm-bindgen" ] }
console_error_panic_hook = "*"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size
opt-level = 's'
# link time optimization using using whole-program analysis
lto = "thin"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
